<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPersonActivity"
    tools:ignore="HardcodedText">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/lbl_person_name"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/person"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_name_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/lbl_budget"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/dollar"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget_hint" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>